[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MTKClient-NoRoot-Termux"
version = "2.1.4"
description = "Optimized MTK flashing tools for Termux (No-Root)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dependencies = [
    "pyusb",
    "pycryptodome",
    "pycryptodomex",
    "colorama",
    "pyserial",
    "fusepy"
]

[project.scripts]
mtk = "mtkclient.mtk:main"
stage2 = "mtkclient.stage2:main"

[tool.hatch.build.targets.sdist]
include = [
    "mtkclient/Loader/*.bin",
    "mtkclient/Loader/Preloader/*.bin",
    "mtkclient/payloads/*.bin"
]

[tool.hatch.build.targets.wheel.force-include]
"mtk.py" = "mtkclient/mtk.py"
"LICENSE" = "LICENSE"
"README.md" = "README.md"
